--- a/place/app/src/index.css
+++ b/place/app/src/index.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap');
 
+html {
+    height: 100%;
+    width: 100%;
+}
+
 body {
     margin: 0;
     overflow-x: hidden;
@@ -8,10 +13,23 @@ body {
     -moz-osx-font-smoothing: grayscale;
     background-color: #303030;
     color: #ffffff;
+    height: 100%;
+    width: 100%;
 }
+
+#root {
+    min-height: 100%;
+    height: auto;
+    min-width: 100%;
+    width: auto;
+    display: flex;
+    align-items: stretch;
+}
+
 
 nav {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     padding: 0 2rem;
@@ -39,121 +57,22 @@ nav>div>* {
     }
 }
 
-.tapestry-row:after {
-    clear: both;
-    content: "";
-    display: table;
+.Sidebar {
+    width: 100px;
+    height: 100%;
 }
 
-.patch_image {
-    flex-grow: 1;
-    touch-action: none;
-    pointer-events: none;
-}
-
-.patch {
-    display: flex;
-    background: #fff;
-    border: 1px solid #999;
-    float: left;
-    font-size: 12px;
-    font-weight: bold;
-    line-height: 12px;
-    height: 48px;
-    margin-right: -1px;
-    margin-top: -1px;
+.App {
     padding: 0;
-    text-align: center;
-    width: 48px;
+    margin: 0;
+    min-width: 100%;
+    width: auto;
+    overflow: hidden;
+    align-content: stretch;
 }
 
-.owned {
-    border: 2px solid #F00;
-    z-index: 99;
-}
-
-.patch:focus {
-    outline: none;
-}
-
-
-/* Split Pane */
-
-.Resizer {
-    position: relative;
-    background: darkGray;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    -moz-background-clip: padding;
-    -webkit-background-clip: padding;
-    background-clip: padding-box;
-}
-
-
-/*
-.Resizer:hover,
-.Resizer:active {
--webkit-transition: all 2s ease;
-transition: all 2s ease;
-}*/
-
-.Resizer.horizontal {
-    height: 11px;
-    margin: -5px 0;
-    border-top: 5px solid rgba(255, 255, 255, 0);
-    border-bottom: 5px solid rgba(255, 255, 255, 0);
-    cursor: row-resize;
-    width: 100%;
-}
-
-
-/*
-.Resizer.horizontal:hover,
-.Resizer.Resizer.horizontal:active {
-border-top: 5px solid rgba(0, 0, 0, 0.5);
-border-bottom: 5px solid rgba(0, 0, 0, 0.5);
-}*/
-
-.Resizer.vertical {
-    width: 20px;
-    margin: 0 -5px;
-    border-left: 5px solid rgba(255, 255, 255, 0);
-    border-right: 5px solid rgba(255, 255, 255, 0);
-    cursor: col-resize;
-}
-
-
-/*
-.Resizer.vertical:hover,
-.Resizer.vertical:active {
-border-left: 5px solid rgba(0, 0, 0, 0.5);
-border-right: 5px solid rgba(0, 0, 0, 0.5);
-}
-*/
-
-.Resizer.disabled {
-    cursor: not-allowed;
-}
-
-.Resizer.disabled:hover,
-.Resizer.disabled:active {
-    border-color: transparent;
-}
-
-.Resizer::after,
-.Resizer::before {
-    content: "";
-    border-left: 1px solid #333;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-100%);
-    right: 0;
-    display: inline-block;
-    height: 20px;
-    margin: 0 2px;
-}
-
-.Resizer::before {
-    left: 0;
+.TapestryCanvas_Container {
+    min-width: 100%;
+    min-height: 100%;
+    overflow: hidden;
 }
