--- a/place/app/src/toolbox.css
+++ b/place/app/src/toolbox.css
@@ -30,6 +30,8 @@
 }
 
 @media (max-width: 576px) {
+    /* TODO - Figure out how to handle mobile
+
     .toolbox__container>div {
         flex-direction: column;
         align-items: center;
@@ -39,7 +41,9 @@
         flex-direction: column;
         align-items: center;
         padding: 2rem;
-    }
+    } 
+    
+    */
 }
 
 .toolbox__container {
