--- a/place/app/src/toolbox.css
+++ b/place/app/src/toolbox.css
@@ -1,7 +1,6 @@
 .toolbox__container {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
     justify-content: space-between;
     padding: 0;
     margin: 0;
@@ -14,6 +13,9 @@
     display: flex;
 }
 
+.toolbox__actions {
+    justify-content: center;
+}
 
 .toolbox__header-container {
     padding: 0;
