--- a/place/app/src/index.css
+++ b/place/app/src/index.css
@@ -18,14 +18,14 @@ body {
 }
 
 #root {
-    min-height: 100%;
-    height: auto;
+    height: 100%;
     min-width: 100%;
     width: auto;
     display: flex;
     align-items: stretch;
 }
 
+/* TODO(will): having "App" in the hierarchy is wierd, can probably remove it? */
 .App {
     padding: 0;
     margin: 0;
