--- a/place/app/src/toolbox.css
+++ b/place/app/src/toolbox.css
@@ -1,12 +1,28 @@
+:root {
+    --palletePixelSize: 48px;
+}
+
 .toolbox__container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 0;
     margin: 0;
-    min-width: 250px;
+    min-width: calc(48px * 5);
     width: auto;
     background: #2c2d30;
+    max-height: 100%;
+    overflow: scroll;
+
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.toolbox__container::-webkit-scrollbar {
+    display: none;
 }
 
 .toolbox__container>div {
@@ -15,6 +31,7 @@
 
 .toolbox__actions {
     justify-content: center;
+    margin: 1rem;
 }
 
 .toolbox__header-container {
@@ -29,6 +46,18 @@
 .toolbox__header-heading {
     text-transform: uppercase;
     color: #fff;
+}
+
+.toolbox__pallete-container {
+    min-width: 100%;
+    width: auto;
+    flex-wrap: wrap;
+}
+
+.toolbox__pallete-pixel {
+    width: 48px;
+    height: 48px;
+    display: inline-block;
 }
 
 @media (max-width: 576px) {
