Add pre-commit hook for code formatting

--- a/place/app/src/index.css
+++ b/place/app/src/index.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap");
 
 @font-face {
-    font-family: 'PublicPixel';
-    src: url('./PublicPixel.ttf') format('truetype');
+    font-family: "PublicPixel";
+    src: url("./PublicPixel.ttf") format("truetype");
 }
 
 html {
@@ -13,7 +13,7 @@ html {
 body {
     margin: 0;
     overflow-x: hidden;
-    font-family: 'Source Code Pro', monospace;
+    font-family: "Source Code Pro", monospace;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: #383838;
